# op_trace

./: .gitignore  LICENSE  README.md  README.zh.md  components.json  package.json  pnpm-lock.yaml  tailwind.config.cjs  vite.config.ts
.github/: copilot-instructions.md
.github/workflows/: release.yml
script/: 4byte.txt  lookup_4byte.mjs
src/: App.tsx  index.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: analysis.rs  daemon.rs  lib.rs  main.rs  optrace_journal.rs  scripts_fs.rs  sourcify.rs
src-tauri/src/commands/: data.rs  debug.rs  decompile.rs  foundry.rs  mod.rs  session.rs
src-tauri/src/op_trace/: cache.rs  debug_session.rs  decompile.rs  evm_runner.rs  inspector.rs  message_encoder.rs  mod.rs  scan.rs  shadow.rs  types.rs
src-tauri/src/op_trace/fork/: fork_inspector.rs  fork_runner.rs  mod.rs
src-tauri/src/op_trace/symbolic/: engine.rs  expr.rs  mod.rs  slicer.rs
src-tauri/src/op_trace/tracer/: memory_tracer.rs  mod.rs  patch_applier.rs  storage_tracer.rs
src/components/: AnalysisDrawer.tsx  BalanceChangesViewer.tsx  BlockInfo.tsx  BookmarksDrawer.tsx  CallTreeViewer.tsx  CfgWindow.svg.tsx  CfgWindow.tsx  CondListDrawer.tsx  DataFlowModal.tsx  DataFlowTree.tsx  DebugPanel.tsx  DebugToolbar.tsx  DecompileDialog.tsx  DrawerHost.tsx  GlobalLogDrawer.tsx  KeyboardShortcutsHelpDialog.tsx  LogViewer.tsx  MainInterface.tsx  MemoryViewer.tsx  NotesDrawer.tsx  OpcodeViewer.tsx  ProgressBar.tsx  RangeDiffDialog.tsx  ReturnDataViewer.tsx  TabBar.tsx  (+11 more)
vscode-extension/: package.json  tsconfig.json
(+65 files in other folders)
