[package]
name = "optrace"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "optrace_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
revm = { version = "36.0.0", features = ["alloydb", "std", "serde"] }
anyhow = "1.0.100"
alloy-provider = "1.7.3"
alloy-sol-types = "1.5.7"
alloy-rpc-types-eth = "1.7.3"
revm-interpreter = "34.0.0"
bincode = "1.3"
tauri-plugin-window-state = "2.4.1"
tauri-plugin-store = "2"
rayon = "1"
rquickjs = { version = "0.6", features = ["bindgen"] }

# ── dev 模式优化：让 EVM 热路径（step / step_end）接近 release 性能 ──
# codegen-units = 1：避免跨 codegen unit 的 .llvm.HASH 符号在增量编译时引发链接失败
[profile.dev]
opt-level = 2          # 自身 crate: O2 → 基本等同 release 性能，保留 debug 信息
codegen-units = 1      # 单 CU：消除跨 CU 内部符号 hash 不匹配问题

[profile.dev.package."*"]
opt-level = 3          # 所有依赖（revm / alloy 等）: O3 → 完整优化

